--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "private": true,
   "engines": {
-    "node": "~8.8.1"
+    "node": "~8.8.1",
+    "npm": "~5.5.1"
   },
   "dependencies": {
     "@angular/animations": "^4.2.4",
     "@angular/cli": "1.4.9",
+    "@angular/compiler-cli": "^4.2.4",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
@@ -32,7 +34,6 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
